tests/compile_fail/declare_scheduler_binary_path_empty.stderr
error: declare_scheduler!: `binary_path` must be a non-empty string
 --> tests/compile_fail/declare_scheduler_binary_path_empty.rs:8:19
  |
8 |     binary_path = "",
  |                   ^^
